<resources>
    <string name="app_name">FitFeed</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="login_button_label">Login</string>
    <string name="home_nav_bar_title">Home</string>
    <string name="workouts_nav_bar_title">Workouts [WIP]</string>
    <string name="social_nav_bar_title">Social</string>
    <string name="add_friends_title">Enter friend\'s username:</string>
    <string name="new_post_button">New Post</string>
    <string name="search_button">Search</string>
    <string name="add_friends_button">Add Friends</string>
    <string name="post_placeholder">Your friend made a post!</string>
    <string name="friend_search_placeholder">Username: holtster2000</string>
    <string name="home_text">Welcome to FitFeed!\n\nCreate a workout plan or add some friends to get started</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="post_button">Post</string>
    <string name="camera_activity_text">Create your post!\n(pump pic optional)</string>
    <string name="camera_error">Error! Could not open camera.</string>
    <string name="camera_file_error">Error! Requires external file permissions to take pictures.</string>
    <string name="post_text_hint">Enter text for post…</string>
    <string name="camera_activity_image_content_description">Image to be added to post.</string>
    <string name="app_logo_description">App Logo image</string>
</resources>